--- a/application/index/View/Login/login.html
+++ b/application/index/View/Login/login.html
@@ -15,7 +15,7 @@ margin-left:400px;
 </style>
 <body>
     <div id="login_form">
-<form action="login" method="post">
+<form action="logins" method="post">
     <dl>
 
     <dt>
