--- a/application/index/View/Login/index.html
+++ b/application/index/View/Login/index.html
@@ -15,7 +15,7 @@ margin-left:400px;
 </style>
 <body>
     <div id="login_form">
-<form action="login" method="post">
+<form action="register" method="post">
     <dl>
 
     <dt>
@@ -32,7 +32,7 @@ margin-left:400px;
     </dt>
 
     <dt>
-        <p><input type="submit" value="登录"></p>
+        <p><input type="submit" value="注册"></p>
     </dt>
     </dl>
 </form>
